# cmo-enclave

./: .gitignore  .gitignore.swp  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  perf_bs.sh  perf_sort.sh
Enclave/: Enclave.cpp  Enclave.h
cmake/: FileUtils.cmake  SGXConfig.cmake
exp_cmo/: README.md
include/: algo.h  cmo.h  cmo_array.h  cmo_avltree.h  cmo_mem.h  cmo_mempool.h  cmo_queue.h  cmo_readonly_set_map.h  coda.h  pao.h  pao_algo.h  po_algo.h  utils.h
misc/: README  read.cpp  write.cpp
pao_test/: CMakeLists.txt  pao_naive_shuffle.cpp
sgx/edl/: algo.edl  untrust.edl
sgx/include/: app.h
sgx/lds/: algo.lds
sgx/src/app/: app.cpp
sgx/src/enclave/: algo.cpp
src/: CMakeLists.txt
src/algo/: bs.cpp  cache_shuffle.cpp  element_count.cpp  graphsc.cpp  kmeans.cpp  kmeans_mr.cpp  mapreduce.cpp  melbourne_shuffle.cpp  merge_sort.cpp  naive_shuffle.cpp  shuffle_bucket.cpp  shuffle_bucket.h  sketch.cpp  sorting_net.cpp  trace_back.cpp  wordcnt.cpp  wordcnt_mr.cpp
src/lib/: cmo.cpp  cmo_abort_handler.s  coda.cpp  utils.cpp
src/pao_algo/: pao_naive_shuffle.cpp
src/pao_lib/: pao.cpp
src/po-algo/: aes_cbc.cpp  leaky_melbourne.cpp  leaky_melshuffle.cpp  link_list.h  po_melbourne_shuffle.cpp
test/: CMakeLists.txt  aes_cbc.cpp  bs.cpp  cache_shuffle.cpp  cmo_array.cpp  cmo_avltree.cpp  cmo_helper.h  cmo_mem.cpp  cmo_mempool.cpp  cmo_readonly_set_map.cpp  element_count.cpp  example.cpp  graphsc.cpp  helper.h  kmeans.cpp  lib_simple.cpp  mapreduce.cpp  melbourne_shuffle.cpp  merge_sort.cpp  naive_shuffle.cpp  pagerank.cpp  po_melbourne.cpp  sgx_helper.h  sketch.cpp  sorting_net.cpp  trace_back.cpp  utils_cmove.cpp  wordcnt.cpp  wordcnt_mr.cpp
tt_sh/: perf_mel.sh
